devops/04 - helm/app_chart/templates/web_nw-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: web_nw
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/web_nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/web_nw: "true"
